<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.vaadin</groupId>
    <artifactId>vaadin-testbench-parent</artifactId>
    <packaging>pom</packaging>
    <version>5.3-SNAPSHOT</version>
    <name>Vaadin TestBench parent</name>

    <organization>
        <name>Vaadin Ltd</name>
        <url>http://vaadin.com/</url>
    </organization>
    <url>http://vaadin.com/</url>
    <issueManagement>
        <system>trac</system>
        <url>http://dev.vaadin.com/</url>
    </issueManagement>
    <developers>
        <developer>
            <id>vaadin</id>
            <organization>Vaadin</organization>
            <organizationUrl>http://vaadin.com</organizationUrl>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Vaadin Commercial License</name>
            <url>https://vaadin.com/commercial-license-and-service-terms</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

     <distributionManagement>
         <snapshotRepository>
             <id>vaadin-snapshots</id>
             <name>Vaadin snapshot repository</name>
             <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>vaadin-addons</id>
             <name>Vaadin add-ons repository</name>
             <url>https://tools.vaadin.com/nexus/content/repositories/vaadin-addons</url>
         </repository>
     </distributionManagement>
    
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <vaadin.version>8.8.3</vaadin.version>
        <vaadin.testbench.api.version>${vaadin.version}</vaadin.testbench.api.version>
        <snapshot.repository.url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/
        </snapshot.repository.url>
        <Implementation-Version>${project.version}</Implementation-Version>
        <currentYear>2024</currentYear>
    </properties>
    <modules>
        <module>vaadin-testbench</module>
        <module>vaadin-testbench-core</module>
        <module>vaadin-testbench-standalone</module>
        <module>vaadin-testbench-assembly</module>
        <module>vaadin-testbench-integration-tests</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.3</version>
                <configuration>
                    <basedir>${basedir}</basedir>
                    <header>${maven.multiModuleProjectDirectory}/vaadin-testbench-core/src/license/header.txt</header>
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>false</aggregate>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <useDefaultMapping>true</useDefaultMapping>
                    <encoding>UTF-8</encoding>
                    <properties>
                        <year>${currentYear}</year>
                    </properties>
                    <includes>
                        <include>/**/*.java</include>
                        <include>*.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
